@@ -931,7 +931,7 @@ void ERR_load_EC_strings(void);
 #define EC_F_D2I_ECPKPARAMETERS				 145
 #define EC_F_D2I_ECPRIVATEKEY				 146
 #define EC_F_DO_EC_KEY_PRINT				 221
-#define EC_F_ECKEY_PARAM2TYPE				 196
+#define EC_F_ECKEY_PARAM2TYPE				 223
 #define EC_F_ECKEY_PARAM_DECODE				 212
 #define EC_F_ECKEY_PRIV_DECODE				 213
 #define EC_F_ECKEY_PRIV_ENCODE				 214
@@ -1033,6 +1033,7 @@ void ERR_load_EC_strings(void);
 #define EC_F_EC_POINT_SET_JPROJECTIVE_COORDINATES_GFP	 126
 #define EC_F_EC_POINT_SET_TO_INFINITY			 127
 #define EC_F_EC_PRE_COMP_DUP				 207
+#define EC_F_EC_PRE_COMP_NEW				 196
 #define EC_F_EC_WNAF_MUL				 187
 #define EC_F_EC_WNAF_PRECOMPUTE_MULT			 188
 #define EC_F_I2D_ECPARAMETERS				 190
